add all fuctionality

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Gelasio&family=Inter:wght@400;500&display=swap');
 @import "@flaticon/flaticon-uicons/css/all/all";
+@import './editor-theme.css';
 
 @tailwind base;
 @tailwind components;
@@ -15,7 +16,7 @@
     }
 
     body {
-        @apply font-inter font-normal text-black;
+        @apply font-inter font-normal text-black bg-white;
     }
 
     i {
